--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.11.0",
+    "apollo-server-express": "^3.6.1",
     "bcrypt": "^4.0.1",
-    "express": "^4.17.1",
-    "graphql": "^15.5.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.17.2",
+    "graphql": "^16.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.7"
+    "mongoose": "^6.1.6",
+    "stripe": "^8.67.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
